Set height of upcoming launch to fixed height. (Fixes overflow problem).

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -149,7 +149,7 @@ button {
 .upcoming-launch {
   position: relative;
   width: 90%;
-  height: 63vh;
+  height: 500px;
   margin: 0 15% 0 5%;
   border-bottom-left-radius: 3px;
   border-bottom-right-radius: 3px;
@@ -182,6 +182,8 @@ button {
 }
 
 .upcoming-header__decoration {
+  pointer-events: none;
+
   grid-column: 1 / 2;
   grid-row: 1 / 2;
 }
